# DocuQuery2

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  app.py  chainlit.md  pyproject.toml
.chainlit/: config.toml
notebooks/: Retrieval_Augmented_Generation_with_LangChain_Meta_RAG_(Assignment).ipynb
src/: chain.py  embeddings.py  loaders.py  vectorstore.py
